# elder-guardian-agent

./: .env.example  .gitattributes  AGENTS.md  BEHAVIOR_BASELINE_CONTEXT_GUIDE.md  CANDIDATE_LOCAL_MODEL_CONTEXT_GUIDE.md  README.md  REAL_DEVICE_MQTT_GUIDE.md  RK3588_DEPLOYMENT_DATA_FLOW_GUIDE.md  RK3588_Deploy_GithubActions.md  V2_Three_Level_AI_Architecture.md  docker-compose.images.yml  docker-compose.rk3588-host.yml  docker-compose.rk3588.yml  docker-compose.yml  environment.yml
.github/workflows/: docker-images.yml
Background_MQTT/: README.md  SCENARIO_DATA_NOTES.md  backend.py  generate_scenario_data.py
Background_MQTT/frontend/: index.html
apps/edge-mcp-server/: Dockerfile  pyproject.toml
apps/edge-mcp-server/app/: behavior_worker.py  config.py  database.py  main.py  mcp_tools.py  models.py  mqtt_bridge.py  policy.py  repository.py  tool_service.py
apps/guardian-core/: Dockerfile  pyproject.toml
apps/guardian-orchestrator/: Dockerfile  pyproject.toml
apps/guardian-orchestrator/app/: config.py  edge_client.py  event_cooldown.py  llm_client.py  main.py  night_activity.py  rules.py  workflow.py
apps/vision-service/: pyproject.toml
configs/: device_policy.yaml  risk_rules.yaml
deploy/rk3588/: update_latest.sh  (+1 more)
scripts/: evaluate_qwen_scenarios.py  native_update.sh
tests/: test_background_events.py  test_behavior_baselines.py  test_daily_health_summary.py  test_device_readings.py  test_guardian_core_llm.py  test_hmi_responses.py  test_llm_client.py  test_night_activity.py  test_orchestrator_no_night_event.py  test_rules.py  test_vision_frames.py
(+17 files in other folders)
