[project]
name = "guardian-orchestrator"
version = "0.1.0"
description = "Rule-triggered multi-step small-model orchestrator for elder guardian v2."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7,<3",
  "httpx>=0.27",
  "guardian-shared"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

